--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        
         {
             "name": "lore_keeper",
             "request": "launch",
@@ -20,6 +21,12 @@
             "request": "launch",
             "type": "dart",
             "flutterMode": "release"
+        },
+        {
+            "name": "Attach to Android Emulator",
+            "request": "attach",
+            "type": "dart",
+            "deviceId": "emulator-5554"
         }
     ]
 }
