--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,8 @@ dependencies:
   json_annotation: ^4.9.0
   flutter_riverpod: ^3.0.3
   uuid: ^4.2.1
+  file_picker: ^8.0.0
+  flutter_svg: ^2.2.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
