Add Magic system models, provider & UI
Introduce a new Magic subsystem: add Hive-backed models (MagicSystem, MagicNode, MagicImage, MagicAttribute) with generated adapters, and a MagicTreeProvider to manage systems/nodes and persistence. Wire the subsystem into app startup by registering adapters and opening magic_systems/magic_nodes boxes (including migration/cleanup logic). Add UI/module pieces for the feature (MagicModule, MagicMainPanel/Magic init wizard widgets and various project editor components) and provider plumbing.

Additionally: switch many in-app icons from Material to lucide_icons_flutter, add in-app webview platform stubs/IO/web implementations, and remove several obsolete/unused files. Update Hive usage and container UI colors/behaviors to integrate the new feature.

--- a/windows/CMakeLists.txt
+++ b/windows/CMakeLists.txt
@@ -9,6 +9,13 @@ set(BINARY_NAME "lore_keeper")
 # Explicitly opt in to modern CMake behaviors to avoid warnings with recent
 # versions of CMake.
 cmake_policy(VERSION 3.14...3.25)
+if(POLICY CMP0175)
+  # Plugins still use add_custom_command(TARGET) with DEPENDS, which is
+  # rejected under CMP0175 NEW. Keep OLD to avoid dev warnings.
+  cmake_policy(SET CMP0175 OLD)
+  # Ensure subprojects that reset policies still default to OLD for CMP0175.
+  set(CMAKE_POLICY_DEFAULT_CMP0175 OLD)
+endif()
 
 # Define build configuration option.
 get_property(IS_MULTICONFIG GLOBAL PROPERTY GENERATOR_IS_MULTI_CONFIG)
@@ -56,6 +63,15 @@ add_subdirectory("runner")
 # Generated plugin build rules, which manage building the plugins and adding
 # them to the application.
 include(flutter/generated_plugins.cmake)
+
+# Suppress noisy warnings from third-party Windows plugins and SDK headers.
+if(MSVC)
+  foreach(plugin ${FLUTTER_PLUGIN_LIST})
+    if(TARGET ${plugin}_plugin)
+      target_compile_options(${plugin}_plugin PRIVATE /wd4244 /wd4458)
+    endif()
+  endforeach()
+endif()
 
 
 # === Installation ===
