--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   native_image_cropper: 0.7.0
+  lucide_icons_flutter: 3.1.9
+  flutter_inappwebview: 6.1.5
+  flutter_inappwebview_android: 1.1.3
+  flutter_inappwebview_ios: 1.1.2
+  flutter_inappwebview_macos: 1.1.2
+  flutter_inappwebview_windows: 0.6.0
+  flutter_inappwebview_web: 1.1.2
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
